# ConHacks2026

./: .gitignore  README.md
backend/: README.md  flake.nix  pyproject.toml  requirements.txt  sample_droplet_metrics.md
backend/alembic/: env.py
backend/alembic/versions/: 705784e1396b_add_github_connections.py  a1b2c3d4e5f6_add_call_timing.py  b2c3d4e5f6a7_add_phone_number.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routers/: frontend_api.py  github.py  health.py  jobs.py  jobs_snowflake.py  runs.py  snowflake.py  snowflake_manual.py  snowflake_v2.py  voice.py  webhooks.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  enums.py  github_connection.py  metrics_snapshot.py  optimization_run.py  terraform_snapshot.py  webhook_delivery.py
backend/app/schemas/: common.py  github.py  runs.py  snowflake_v2.py
backend/app/services/: digitalocean_ai_service.py  digitalocean_monitoring_service.py  digitalocean_service.py  events.py  ingest_service.py  job_service.py  snowflake_service.py  snowflake_workflows.py  terraform_reader.py  voice_call_service.py
backend/sample_payloads/: do_monitoring_cpu_matrix.json  do_monitoring_disk_matrix.json  do_monitoring_memory_matrix.json  do_monitoring_network_matrix.json
frontend/: flake.nix  package-lock.json  package.json  pnpm-lock.yaml
frontend/MainPage/: index.html  package.json
frontend/supabase/: scan_history.sql
terraform/: outputs.tf  terraform.tfvars.example  variables.tf
terraform/backend/: main.tf
(+34 files in other folders)
