[project]
name = "conhacks-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "sqlalchemy",
  "psycopg[binary]",
  "asyncpg",
  "alembic",
  "httpx",
  "python-dotenv",
  "websockets",
  "cryptography",
  "snowflake-connector-python",
  "python-hcl2",
  "twilio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
